# NextClientServerApi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  version.version
addons/amxmodx/data/nextclient_api/pkeys/: active.txt  rsa-1.pem  rsa-2.pem  rsa-3.pem  rsa-4.pem  rsa-5.pem  rsa-6.pem
addons/amxmodx/scripting/include/: next_client_api.inc
amxx_test/addons/amxmodx/scripting/: test_nextclient_api.sma
amxx_test/models/: v_ak47_with_skins.mdl  v_m4a1_with_body.mdl
amxx_test/models/test_nextclient/: p_glock18.mdl  p_usp.mdl  v_glock18.mdl  v_usp.mdl  w_glock18.mdl  w_usp.mdl
amxx_test/sprites/test_nextclient/: TBW1.spr  TBW2.spr  TBW3.spr  TBW4.spr  TBW5.spr  TBW6.spr  TBW7.spr  TDW.spr  THUD.spr  hud.txt  radar640.spr  radaropaque640.spr  weapon_ak47.txt  weapon_aug.txt  weapon_awp.txt  weapon_c4.txt  weapon_deagle.txt  weapon_elite.txt  weapon_famas.txt  weapon_fiveseven.txt  weapon_flashbang.txt  weapon_g3sg1.txt  weapon_galil.txt  weapon_glock18.txt  weapon_hegrenade.txt  weapon_knife.txt  weapon_m249.txt  weapon_m3.txt  weapon_m4a1.txt  weapon_mac10.txt  weapon_mp5navy.txt  weapon_p228.txt  weapon_p90.txt  weapon_scout.txt  weapon_sg550.txt  weapon_sg552.txt  weapon_shield.txt  weapon_shieldgun.txt  weapon_smokegrenade.txt  weapon_tmp.txt  (+3 more)
cmake/: Dependencies.cmake
public/: api.h  moduleconfig.h
public/api/: ICvarSandbox.h  IDeathMsgWpnIcon.h  IDeprecatedAPI.h  INextClientAPI.h  IPrivatePrecache.h  IViewmodelFX.h  nclm_proto.h
src/: AmxContextGuard.cpp  AmxContextGuard.h  EventManager.cpp  EventManager.h  SizeBufWriter.h  api_access.h  asserts.cpp  asserts.h  elpplog.cpp  elpplog.h  events.h  main.cpp  main.h  module_types.h  rehlds_api_provider.cpp  rehlds_api_provider.h  utilfuncs.cpp  utilfuncs.h
src/amxxmodule/: amxxmodule.cpp  moduleconfig.h
src/api/: CvarSandbox.cpp  CvarSandbox.h  DeathMsgWpnIcon.cpp  DeathMsgWpnIcon.h  HealthNext.cpp  HealthNext.h  NclmProtocol.cpp  NclmProtocol.h  NextClientApi.cpp  NextClientApi.h  PrivatePrecache.cpp  PrivatePrecache.h  Verificator.cpp  Verificator.h  ViewmodelFX.cpp  ViewmodelFX.h
src/natives/: cvar_sandbox.cpp  death_notice_wpn_icon.cpp  hud_sprite.cpp  hwid.cpp  miscellaneous.cpp  natives.cpp  natives.h  nextclient.cpp  private_precache.cpp  viewmodelfx.cpp
src/services/: CvarSandbox.cpp  CvarSandbox.h  DeathMsgWpnIcon.cpp  DeathMsgWpnIcon.h  HealthNext.cpp  HealthNext.h  HudSprite.cpp  HudSprite.h  IDeprecatedAPI.h  INextClientAPI.h  INextClientInfo.h  Miscellaneous.cpp  Miscellaneous.h  NextClientApi.cpp  NextClientApi.h  NextClientVersion.cpp  NextClientVersion.h  PlayerData.h  PrivatePrecache.cpp  PrivatePrecache.h  RehldsHookchainsService.h  SandboxCvar.h  ViewmodelFX.cpp  ViewmodelFX.h
src/services/game_events/: GameEventsManager.cpp  GameEventsManager.h  events.h  game_events.cpp  game_events.h
src/services/nclm_protocol/: NclmProtocol.cpp  NclmProtocol.h  NclmSizeBufWriter.cpp  NclmSizeBufWriter.h  Verifier.cpp  Verifier.h  events.h  nclm_proto.h  rehlds_events.cpp  rehlds_events.h
src/utils/: SizeBufWriter.cpp  SizeBufWriter.h  string_utils.h  utilfuncs.cpp  utilfuncs.h
